# AI_agent_insurance_underwriter

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  ingestion_agent.py  orchestrator.py  rag_agent.py  risk_scoring_agent.py  sql_agent.py
data/sample_policies/: auto_policy_003.txt  commercial_policy_001.txt  homeowners_policy_002.txt
llm/: __init__.py  base.py  factory.py  mock_llm.py  openai_llm.py
models/: __init__.py  risk_model.py
src/underwriting_suite/: __init__.py  config.py  main.py
src/underwriting_suite/agent/: __init__.py  registry.py  schemas.py  state.py  supervisor.py
src/underwriting_suite/agent/skills/: commit_db_write.md  extract_entities.md  plan_db_write.md  query_rag.md  read_sql.md  research_web.md  score_risk.md  skill_db_write.py  skill_extraction.py  skill_rag.py  skill_risk_model.py  skill_sql_read.py  skill_web_research.py
src/underwriting_suite/api/: agent_routes.py  applicant_routes.py  docs_routes.py  extraction_routes.py  ml_routes.py  router.py  session_routes.py  sql_routes.py
src/underwriting_suite/db/: database.py
src/underwriting_suite/models/: applicant.py  document.py  extraction.py  risk_score.py  session_trace.py  write_plan.py
src/underwriting_suite/services/: azure_openai.py  azure_search.py  db_service.py  document_service.py
tests/: test_ingestion_agent.py  test_orchestrator.py  test_rag_agent.py  test_risk_scoring_agent.py  test_sql_agent.py
utils/: database.py  document_loader.py  vector_store.py
(+12 files in other folders)
