[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "underwriting_suite"
version = "1.0.0"
description = "Underwriting Decision Support Suite – LLM Supervisor ReAct Planning with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Underwriting Suite Team" }]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.1.0",
    "azure-search-documents>=11.4.0",
    "azure-identity>=1.16.0",
    "azure-storage-blob>=12.19.0",
    "azure-keyvault-secrets>=4.8.0",
    "openai>=1.20.0",
    "sqlalchemy>=2.0.28",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.6.0",
    "applicationinsights>=0.11.10",
    "azure-monitor-opentelemetry>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/underwriting_suite"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
